--- a/css/main.css
+++ b/css/main.css
@@ -1,36 +1,89 @@
-* { margin: 0; padding: 0; }
-body { background:#fff; font-size: 13px; color: #666; font-family: Arial, helvetica, sans-serif;}
-header nav ul { list-style: none; margin: 0;}
-nav ul li { margin: 0; padding: 0;}
-h1 { margin-bottom: 10px; color: #111111;}	
-a, img { color: #000; font-weight: bold; text-transform: uppercase;}
-p {font-size: 16px;}
-img { margin-bottom: 10px;}
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section { 
-    display: block;
-	}
+* {
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	background: #fff;
+	font-size: 13px;
+	color: #666;
+	font-family: Arial, helvetica, sans-serif;
+}
+
+header nav ul {
+	list-style: none;
+	margin: 0;
+	text-align: right;
+}
+
+nav ul li {
+	margin-left: 15px;
+	padding: 0;
+	display: inline;
+}
+
+h1 {
+	margin-bottom: 10px;
+	color: #111111;
+}
+
+a, img {
+	color: #000;
+	font-weight: bold;
+	text-transform: uppercase;
+}
+
+p {
+	font-size: 16px;
+}
+
+img {
+	margin-bottom: 10px;
+}
+
+article, aside, details, figcaption, figure, footer, header, hgroup,
+	menu, nav, section {
+	display: block;
+}
 
 #wrapper {
-    width: 96%;	
+	width: 96%;
 	max-width: 960px;
-	margin:0px auto;
+	margin: 0px auto;
 	padding: 2%;
-
-} 
+}
 
 #main {
-		width: 100%;
-		margin-right: 5%;
-		float: left;
-}		
-		
+	width: 100%;
+	margin-right: 5%;
+	float: left;
+}
+
+#main img {
+	display: block;
+	margin: 0px auto;
+}
+
+.precio {
+	display: block;
+	text-align:center;
+	height: 26px;
+	width: 120px;
+	background-color: #000;
+	color: white;
+	margin: 15px auto;
+	font-size: 20px;
+	
+	
+}
+
+
 .logo {
 	float: left;
 }
-	
+
 footer {
-	clear:both;
+	clear: both;
 	width: 100%;
 	padding: 25px 0 0px 0px;
 	text-align: center;
@@ -40,7 +93,12 @@ footer {
 	font-weight: bold;
 }
 
+nav ul li a:hover {
+	text-decoration: none;
+	list-style-type: none;
+}
 
-
-
-
+header nav {
+	margin-top: 5%;
+	float: right;
+}
